fix pixels not showing 16x16

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body{
 
 .pixels{
     flex: 1 1 auto;
-    padding: 1rem;
+    padding: 1.01rem;
     border-radius: 2px;
     background-color: #fafafc;
 } 
